# Inbox-Concierge

./: .gitignore  README.md
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/api/auth/callback/: route.ts
client/app/emails/: page.tsx
client/app/emails/components/: EmailRow.tsx  EmailTable.tsx  LabelsDropdown.tsx
client/app/emails/hooks/: useBucketMutations.ts  useEmails.ts
client/app/hooks/: useBuckets.ts  useLogin.ts
client/components/: BucketManager.tsx  EmailCard.tsx  EmailList.tsx  LoginButton.tsx  LoginScreen.tsx
client/types/: index.ts
client/utils/: colors.ts
server/: .env.example  .gitignore  config.py  main.py  pyproject.toml  run_categorization_test.py
server/__tests__/: README.md  TESTING_SUMMARY.md  run_categorization_test.py  test_categorization.py
server/data/__tests__/: sample_fetch_res.json
server/models/: schemas.py
server/routes/: auth.py  buckets.py  emails.py
server/services/: categorization_service.py  gmail_service.py  storage_service.py
server/services/agents/: categorization_agent.py
server/services/prompts/: categorization_template.jinja2
